Fixed margins between sections on mobile devices

--- a/css/wedding.css
+++ b/css/wedding.css
@@ -868,6 +868,15 @@ label {
   .ceremony-col {
     margin-bottom: 30px;
   }
+  .welcomeparty-col {
+    margin-bottom: 30px;
+  }
+  .ceremony-col {
+    margin-bottom: 30px;
+  }
+  .map-col {
+    margin-bottom: 30px;
+  }
   .story-box .content-container {
     padding: 15px;
   }
